[package]
name = "jotsy"
version = "0.1.0"
edition = "2021"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
description = "Jotsy is a self-hosted, free and open-source notes app that focuses on simplicity"
license = "Apache-2.0"
repository = "https://github.com/ohsayan/jotsy"
readme = "README.md"

[dependencies]
# networking
axum = { version = "0.4.5", features = ["headers"] }
tokio = { version = "1.16.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
skytable = { version = "0.7.0-alpha.4", features = [
    "aio",
], default-features = false }
# http
cookie = "0.16.0"
tower-cookies = "0.5.0"
mime = "0.3.16"
# templating and ser/de
comrak = "0.12.1"
askama = { version = "0.11.0" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
# tokens and auth
bcrypt = "0.10.1"
sha2 = "0.10.1"
rand = "0.8.4"
# utility
time = "0.3.7"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4"
envconfig = "0.10.0"
