[package]
name = "jotsy"
version = "0.1.0"
edition = "2021"
authors = ["Sayan Nandan <nandansayan@outlook.com>"]
description = "Jotsy is a self-hosted, free and open-source notes app that focuses on simplicity"
license = "Apache-2.0"
repository = "https://github.com/ohsayan/jotsy"
readme = "README.md"

[dependencies]
# networking
axum = { version = "0.5.17", features = ["headers"] }
tokio = { version = "1.22.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
skytable = { version = "0.7.2", features = ["aio"], default-features = false }
# http
cookie = "0.16.1"
tower-cookies = "0.7.0"
mime = "0.3.16"
# templating and ser/de
comrak = "0.15.0"
askama = { version = "0.11.1" }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
# tokens and auth
bcrypt = "0.13.0"
sha2 = "0.10.6"
rand = "0.8.5"
# utility
time = "0.3.17"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.23"
envconfig = "0.10.0"
